// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with multiple expense items 1`] = `
<div>
  Viewing 
  3
   expenses totalling 
  $1,141.95
</div>
`;

exports[`should render ExpensesSummary with no expense items 1`] = `
<div>
  Viewing 
  0
   expenses totalling 
  $0.00
</div>
`;

exports[`should render ExpensesSummary with single expense item 1`] = `
<div>
  Viewing 
  1
   expenses totalling 
  $1,095.00
</div>
`;
